--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ button:active {
 }
 #billielink:hover {
   background-color: rgba(1, 2, 1, 0.781);
+  color: white;
 }
 #dojalink:hover {
   background-color: rgba(255, 19, 223, 0.781);
