--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  background: rgba(0,0,0,0.2);
+}
+
 button {
   background-color: grey;
   color: black;
@@ -9,7 +13,7 @@ button {
 button:active {
   transform:translateY(-5px);
 }
-/* Dropdown Button */
+
 .dropbtn {
   background-color: #3498DB;
   color: white;
