--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ button:active {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  border:
 }
 
 
@@ -68,4 +69,11 @@ button:active {
 }
 #nicklelink:hover {
   background-color: rgba(58, 90, 233, 0.781);
+}
+
+#intro {
+  margin: 0px 0px 0px 400px;
+}
+h1 {
+  background-image: linear-gradient( red,orange, yellow);
 }
