--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ button:active {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  border:
+  
 }
 
 
@@ -52,6 +52,7 @@ button:active {
   text-decoration: none;
   display: block;
   border-radius: 5;
+  border: 1px solid #09293d;
 }
 
 
@@ -72,7 +73,7 @@ button:active {
 }
 
 #intro {
-  margin: 0px 0px 0px 400px;
+  position: relative; left: 900px
 }
 h1 {
   background-image: linear-gradient( red,orange, yellow);
