--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ button:active {
   font-size: 16px;
   border: none;
   cursor: pointer;
+  text-align: center;
 }
 
 
@@ -32,6 +33,8 @@ button:active {
 .dropdown {
   position: relative;
   display: inline-block;
+  text-align: center;
+  margin: 50px 0 0 0;
 }
 
 
@@ -73,8 +76,12 @@ button:active {
 }
 
 #intro {
-  position: relative; left: 900px
+  margin: auto 300px;
 }
 h1 {
   background-image: linear-gradient( red,orange, yellow);
+}
+
+h4 {
+  flex: auto;
 }
