--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: rgba(0,0,0,0.2);
+  background: rgba(113, 29, 182, 0.726);
 }
 
 button {
@@ -24,7 +24,7 @@ button:active {
   text-align: center;
 }
 
-
+/*when mouse is over the button*/
 .dropbtn:hover, .dropbtn:focus {
   background-color: #2980B9;
 }
@@ -32,56 +32,64 @@ button:active {
 
 .dropdown {
   position: relative;
-  display: inline-block;
   text-align: center;
   margin: 50px 0 0 0;
 }
 
-
-.dropdown-content {
+/* dropdown artist */
+.artists {
   display: none;
-  position: absolute;
-  background-color: #a3d5e0;
+  position: relative;
+  
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  width: 200px;
   z-index: 1;
   
 }
 
-
-.dropdown-content a {
+/*each artist box */
+.artists a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   border-radius: 5;
   border: 1px solid #09293d;
+  background-color: #a3d5e0;
 }
-
-
 .show {display:block;}
-
 #gunnalink:hover {
-  background-color: rgba(9, 185, 39, 0.781);
+  background: rgba(11, 228, 138, 0.609);
+  color: white;
 }
 #billielink:hover {
-  background-color: rgba(1, 2, 1, 0.781);
+  background-color: rgba(17, 238, 17, 0.842);
   color: white;
 }
 #dojalink:hover {
   background-color: rgba(255, 19, 223, 0.781);
+  color: white;
 }
 #nicklelink:hover {
   background-color: rgba(58, 90, 233, 0.781);
+  color: white;
 }
 
-#intro {
-  margin: auto 300px;
-}
+
 h1 {
-  background-image: linear-gradient( red,orange, yellow);
+  background-color: red;
+  display: table;
 }
 
 h4 {
   flex: auto;
+}
+
+#intro {
+  background-image: linear-gradient(rgb(161, 43, 161), pink, purple);
+  width: 300px;
+  border: 5px solid rgb(188, 238, 188);
+  padding: 50px;
+  margin: 2px;
+  float: right;
 }
