--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ button:active {
   transition-duration: 1.0s;
   border-radius: 60%;
   border: 2px solid black;
+  display: flex;
 }
 
 /*when mouse is over the button*/
@@ -29,9 +30,13 @@ button:active {
 
 .dropdown {
   padding: 50px;
-  margin: 2px;
   text-align: center;
   margin: 40px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 /* dropdown for artist */
@@ -40,20 +45,20 @@ button:active {
   position: relative;
   min-width: 160px;
   width: 200px;
-  
+  order: 0;
 }
+
 
 /*each artist box */
 .artists a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
-  display: block;
   border-radius: 5;
   border: 1px solid #09293d;
   background-color: #a3d5e0;
   position: sticky;
-  
+  display:block;
 }
 /* get contents to show */
 .show {
@@ -87,11 +92,12 @@ button:active {
 h1 {
   background-color: red;
   display: table;
+  text-align: center;
 }
 
 /* the lyrics */
 h4 {
-  flex: auto;
+  
 }
 
 /*"Need...."*/
@@ -103,3 +109,7 @@ h4 {
   margin: 2px;
   float: right;
 }/**/
+
+#artistphoto {
+  border-radius: 50%;
+}
