--- a/style.css
+++ b/style.css
@@ -92,17 +92,29 @@ h1 {
 }
 
 /* the lyrics */
+
 h4 {
+  color: red;
+  display: table;
+  justify-content: space-between;
+  align-items: flex-end;
+  text-align : center;
+  border: 5px solid rgb(12, 11, 11);
+  height: 20%;
+  padding: 40px;
+  margin: 20px;
+  border-radius: 100%;
+  
   
 }
 
 /*"Need...."*/
 #intro {
-  background-image: linear-gradient(rgb(161, 43, 161), pink, purple);
+  background: whitesmoke;
   width: 300px;
   border: 5px solid rgb(188, 238, 188);
-  padding: 50px;
-  margin: 2px;
+  padding: 40px;
+  margin: 0px;
   float: right;
 }/**/
 
