--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ button:active {
   background-color: rgba(240, 78, 218, 0.781);
   color: white;
 }
-#nicklelink:hover {
+#nickellink:hover {
   background-color: rgba(58, 90, 233, 0.781);
   color: white; 
 }
