--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
+a {
+  color: black;
+  border: 3px solid rgba(0, 0, 0, 0.781);
+  background-color: white;
+  padding: 4px
+}
+span {
+  text-decoration: underline;
+  margin: 20px auto;
+}
+a:hover{
+  color:red
+}
+
 body {
-  background: rgba(113, 29, 182, 0.726);
+  background:rgba(78, 107, 69, 0.781)
 }
 
 /*when clicked*/
@@ -108,7 +122,7 @@ h4 {
 /*"Intro"*/
 #intro {
   display: flex;
-  background: whitesmoke;
+  background: rgb(209, 210, 221);
   width: 300px;
   border: 10px ridge rgb(78, 80, 80);
   padding: 40px;
@@ -122,4 +136,10 @@ h4 {
   margin: 30px 500px 30px 0;
 }
 
+@media screen and (max-width: 1020px) {
+  body {
+    font-size: x-small;
+    background-image: linear-gradient(grey,white,grey);
+  }
 
+}
